# libNigel

./: .gitignore  README.md
resources/: nigel.qrc
source/: CMakeLists.txt
source/inc/: NigelApplication.hpp  NigelExport.hpp  NigelMSVC.hpp  NigelModule.hpp
source/inc/COLLADA/: DocumentInstance.hpp  DocumentInstanceReference.hpp  Element.hpp  ElementsLibrary.hpp  ICollection.hpp  IElement.hpp  IOwner.hpp  IScopedElement.hpp  IUniqueElement.hpp  InstancesManager.hpp  ScopedElement.hpp  UniqueElement.hpp  UniqueScopedElement.hpp  headers.cmake
source/inc/COLLADA/asset/: Asset.hpp  Contributor.hpp  IAssetOwner.hpp
source/inc/COLLADA/data/: Accessor.hpp  Array.hpp  FloatArray.hpp  IArray.hpp  ISourcesCollection.hpp  IntArray.hpp  Source.hpp
source/inc/COLLADA/extra/: Extra.hpp  IExtrasCollection.hpp
source/inc/COLLADA/instantiation/: ElementInstance.hpp
source/inc/animation/: Animation.hpp  AnimationClip.hpp  AnimationClipsLibrary.hpp  AnimationInstance.hpp  AnimationsLibrary.hpp  IAnimationsCollection.hpp  headers.cmake
source/inc/camera/: Camera.hpp  CameraInstance.hpp  CamerasLibrary.hpp  headers.cmake
source/inc/fx/: headers.cmake
source/inc/fx/effect/: Effect.hpp  EffectsLibrary.hpp
source/inc/fx/image/: Image.hpp  ImagesLibrary.hpp
source/inc/fx/material/: Material.hpp  MaterialsLibrary.hpp
source/inc/geometry/: GeometricElement.hpp  GeometriesLibrary.hpp  Geometry.hpp  GeometryInstance.hpp  IGeometryInstancesCollection.hpp  headers.cmake
source/inc/geometry/mesh/: Mesh.hpp  Patch.hpp  Primitive.hpp  QuadsPatch.hpp  Structures.hpp  TrianglesPatch.hpp
source/inc/geometry/mesh/buffer/: Buffer.hpp  VertexBuffer.hpp
source/inc/lighting/: Light.hpp  LightInstance.hpp  LightsLibrary.hpp  headers.cmake
source/inc/math/: Math.hpp  MathEngine.hpp  MathTypes.hpp  Matrix4x4f.hpp  Matrix4x4fRoutines.hpp  Matrix4x4fRoutines_CPP.hpp  Matrix4x4fRoutines_SSE.hpp  Quaternionf.hpp  QuaternionfRoutines.hpp  QuaternionfRoutines_CPP.hpp  QuaternionfRoutines_SSE.hpp  Vector4f.hpp  Vector4fRoutines.hpp  Vector4fRoutines_CPP.hpp  Vector4fRoutines_SSE.hpp  headers.cmake
source/inc/modeling/: ModelingEngine.hpp  headers.cmake
source/inc/modeling/shape/: Box.hpp  Cone.hpp  Cylinder.hpp  Generator.hpp  GeneratorParameter.hpp  Plane.hpp  Pyramid.hpp  Shape.hpp  ShapeManager.hpp  Sphere.hpp  Torus.hpp
source/inc/modeling/shape/meshGenerator/: BoxTrianglesMeshGenerator.hpp  ConeTrianglesMeshGenerator.hpp  CylinderTrianglesMeshGenerator.hpp  PlaneTrianglesMeshGenerator.hpp  SphereTrianglesMeshGenerator.hpp  TorusTrianglesMeshGenerator.hpp
source/inc/project/: Model.hpp  Project.hpp  ProjectConstants.hpp  headers.cmake
source/inc/rendering/: MatrixStack.hpp  headers.cmake
source/inc/scene/: INodesCollection.hpp  Node.hpp  NodeInstance.hpp  NodesLibrary.hpp  Scene.hpp  VisualScene.hpp  VisualSceneInstance.hpp  VisualScenesLibrary.hpp  headers.cmake
source/inc/scene/transformation/: Matrix.hpp  Rotation.hpp  Scale.hpp  Transformation.hpp  Translation.hpp
source/src/: NigelApplication.cpp  NigelModule.cpp
source/src/COLLADA/: DocumentInstance.cpp  DocumentInstance.cxx  DocumentInstanceReference.cpp  Element.cpp  ElementsLibrary.cxx  ICollection.cxx  IElement.cpp  IOwner.cxx  IScopedElement.cpp  IScopedElement.cxx  IUniqueElement.cpp  InstancesManager.cpp  ScopedElement.cpp  ScopedElement.cxx  UniqueElement.cpp  UniqueScopedElement.cpp  sources.cmake
source/src/COLLADA/asset/: Asset.cpp  Contributor.cpp  IAssetOwner.cpp
source/src/COLLADA/data/: FloatArray.cpp  IArray.cpp  ISourcesCollection.cpp  IntArray.cpp  Source.cpp
source/src/COLLADA/extra/: Extra.cpp  IExtrasCollection.cpp
source/src/COLLADA/instantiation/: ElementInstance.cpp  ElementInstance.cxx
source/src/animation/: Animation.cpp  AnimationClip.cpp  AnimationClipsLibrary.cpp  AnimationInstance.cpp  AnimationsLibrary.cpp  IAnimationsCollection.cpp  sources.cmake
source/src/camera/: Camera.cpp  CameraInstance.cpp  CamerasLibrary.cpp  sources.cmake
source/src/fx/: sources.cmake
source/src/fx/effect/: Effect.cpp  EffectsLibrary.cpp
source/src/fx/image/: Image.cpp  ImagesLibrary.cpp
source/src/fx/material/: Material.cpp  MaterialsLibrary.cpp
source/src/geometry/: GeometricElement.cpp  GeometriesLibrary.cpp  Geometry.cpp  GeometryInstance.cpp  IGeometryInstancesCollection.cpp  sources.cmake
source/src/geometry/mesh/: Mesh.cpp  Patch.cpp  Primitive.cpp  QuadsPatch.cpp  TrianglesPatch.cpp
source/src/geometry/mesh/buffer/: Buffer.cpp  VertexBuffer.cpp
source/src/lighting/: Light.cpp  LightInstance.cpp  LightsLibrary.cpp  sources.cmake
source/src/math/: MathEngine.cpp  Matrix4x4f.cpp  Matrix4x4fRoutines.cpp  Matrix4x4fRoutines_CPP.cpp  Matrix4x4fRoutines_SSE.cpp  Matrix4x4fRoutines_SSE_GCC.cpp  Matrix4x4fRoutines_SSE_MSVC.cpp  Quaternionf.cpp  QuaternionfRoutines.cpp  QuaternionfRoutines_CPP.cpp  QuaternionfRoutines_SSE.cpp  QuaternionfRoutines_SSE_GCC.cpp  Vector4f.cpp  Vector4fRoutines.cpp  Vector4fRoutines_CPP.cpp  Vector4fRoutines_SSE.cpp  Vector4fRoutines_SSE_GCC.cpp  sources.cmake
source/src/modeling/: sources.cmake
source/src/modeling/shape/: Box.cpp  Cone.cpp  Cylinder.cpp  Generator.cpp  GeneratorParameter.cpp  Plane.cpp  Pyramid.cpp  Shape.cpp  ShapeManager.cpp  Sphere.cpp  Torus.cpp
source/src/modeling/shape/meshGenerator/: BoxTrianglesMeshGenerator.cpp  ConeTrianglesMeshGenerator.cpp  CylinderTrianglesMeshGenerator.cpp  PlaneTrianglesMeshGenerator.cpp  SphereTrianglesMeshGenerator.cpp  TorusTrianglesMeshGenerator.cpp
source/src/project/: Model.cpp  Project.cpp  sources.cmake
source/src/rendering/: MatrixStack.cpp  sources.cmake
source/src/scene/: INodesCollection.cpp  Node.cpp  NodeInstance.cpp  NodesLibrary.cpp  Scene.cpp  VisualScene.cpp  VisualSceneInstance.cpp  VisualScenesLibrary.cpp  sources.cmake
source/src/scene/transformation/: Matrix.cpp  Rotation.cpp  Scale.cpp  Transformation.cpp  Translation.cpp
